WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Driver__c/FleetEnrollment_Driver__c.object-meta.xml
<CustomObject>
    <label>Fleet Enrollment Driver</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Fleet Enrollment Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet Enrollment Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>