WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Driver__c/fields/Card_Control_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Control_Type__c</fullName>
    <label>Card Control Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Products</fullName>
            </value>
            <value>
                <fullName>Fuel and Auto</fullName>
            </value>
            <value>
                <fullName>Fuel and Oil</fullName>
            </value>
            <value>
                <fullName>Fuel Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>