WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Driver__c/fields/Driver_ID__c.field-meta.xml
<CustomField>
    <fullName>Driver_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driver ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>