WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Driver__c/fields/Driver_ID_Length__c.field-meta.xml
<CustomField>
    <fullName>Driver_ID_Length__c</fullName>
    <formula>LEN(Driver_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver ID Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>