WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Driver__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <formula>Fleet_Enrollment__r.Opportunity_Number__c</formula>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>