WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Driver__c/fields/Prompt_Options__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Options__c</fullName>
    <label>Prompt Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle ID &amp; Odometer</fullName>
            </value>
            <value>
                <fullName>Vehicle ID Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>